[package]
name = "my_library_mut_random_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true, optional = true }
rand_xorshift = { workspace = true, optional = true }
bevy = {  workspace = true }

[features]
default = [ "pcg" ]
pcg = [ "rand_pcg" ]
xorshift = [ "rand_xorshift" ]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "random"
harness = false