[package]
name = "my_library_flappy_state_menu"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = {  workspace = true }
rand_pcg = { workspace = true, optional = true }
rand_xorshift = { version = "0.3", optional = true }
bevy = {  workspace = true }

[features]
default = [ "pcg" ]
pcg = [ "rand_pcg" ]
xorshift = [ "rand_xorshift" ]
locking = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "random"
harness = false