[package]
name = "mars_base_one_score"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {  workspace = true }
my_library = { package="my_library_mbone_skeleton", path = "../../MarsBaseOneSkeleton/my_library" }
serde = { version = "1.0.210", features = ["derive"] }
ureq = { version = "2.10.1", features = ["json"] }
